connected cra to spring, default cra page loads on localhost:8080

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,11 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "test-once": "CI=true react-scripts test",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:8080",
   "eslintConfig": {
     "extends": "react-app"
   },
