--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,9 @@
 spring:
   profiles:
     active: @spring.profiles.active@
+  datasource:
+    url: jdbc:h2:mem:dafcbts;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    driver-class-name: org.h2.Driver
+    platform: h2
+    username: dafcbts
+    password:
