--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <java.version>1.8</java.version>
         <frontend-maven-plugin.version>1.9.1</frontend-maven-plugin.version>
         <node.version>v13.9.0</node.version>
-        <yarn.version>v1.21.1</yarn.version>
+        <npm.version>6.13.7</npm.version>
         <frontend.dir>frontend</frontend.dir>
         <target.dir>target</target.dir>
         <jupiter.version>5.5.1</jupiter.version>
@@ -108,29 +108,27 @@
                             <execution>
                                 <id>Install Node/Yarn</id>
                                 <goals>
-                                    <goal>install-node-and-yarn</goal>
+                                    <goal>install-node-and-npm</goal>
                                 </goals>
                                 <configuration>
                                     <nodeVersion>${node.version}</nodeVersion>
-                                    <yarnVersion>${yarn.version}</yarnVersion>
+<!--                                    <npmVersion>${npm.version}</npmVersion>-->
                                 </configuration>
                             </execution>
 
                             <execution>
                                 <id>Install dependencies</id>
                                 <goals>
-                                    <goal>yarn</goal>
+                                    <goal>npm</goal>
                                 </goals>
-                                <configuration>
-                                    <arguments>install</arguments>
-                                </configuration>
                             </execution>
 
                             <execution>
                                 <id>Run Front-End Tests</id>
                                 <goals>
-                                    <goal>yarn</goal>
+                                    <goal>npm</goal>
                                 </goals>
+                                <phase>compile</phase>
                                 <configuration>
                                     <arguments>run test-once</arguments>
                                 </configuration>
@@ -139,10 +137,10 @@
                             <execution>
                                 <id>Build Output Files</id>
                                 <goals>
-                                    <goal>yarn</goal>
+                                    <goal>npm</goal>
                                 </goals>
                                 <configuration>
-                                    <arguments>build</arguments>
+                                    <arguments>run build</arguments>
                                 </configuration>
                             </execution>
                         </executions>
