--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test-once": "jest test",
-    "test": "react-scripts test",
+    "test": "jest test",
     "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:8080/",
