--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,4 +1,6 @@
 spring:
+  main:
+    banner-mode: off
   profiles:
     active: @spring.profiles.active@
   datasource:
@@ -7,6 +9,9 @@ spring:
     platform: h2
     username: dafcbts
     password:
-  output:
-    ansi:
-      enabled: always
+logging:
+  level:
+    ROOT: ERROR
+    org.springframework: OFF
+    org.hibernate: OFF
+    org.hibernate.SQL: OFF
