lots of little fixes to get testing/acceptance working, implemented enum for authState.authStep, strongly-typed actions

--- a/pom.xml
+++ b/pom.xml
@@ -248,7 +248,7 @@
                         <version>1.8</version>
                         <executions>
                             <execution>
-                                <phase>package</phase>
+                                <phase>generate-resources</phase>
                                 <configuration>
                                     <target>
                                         <copy todir="${project.build.directory}/classes/public">
