--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "homepage": "/",
   "dependencies": {
     "@material-ui/core": "^4.9.4",
