--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -9,13 +9,12 @@ spring:
     platform: h2
     username: dafcbts
     password:
-      data: classpath:data-h2.sql
-  jpa:
-    hibernate:
-      ddl-auto: none
-logging:
-  level:
-    ROOT: ERROR
-    org.springframework: OFF
-    org.hibernate: OFF
-    org.hibernate.SQL: OFF
+  output:
+    ansi:
+      enabled: always
+#logging:
+#  level:
+#    ROOT: ERROR
+#    org.springframework: OFF
+#    org.hibernate: OFF
+#    org.hibernate.SQL: OFF
