--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -12,9 +12,9 @@ spring:
   output:
     ansi:
       enabled: always
-#logging:
-#  level:
-#    ROOT: ERROR
-#    org.springframework: OFF
-#    org.hibernate: OFF
-#    org.hibernate.SQL: OFF
+logging:
+ level:
+   ROOT: ERROR
+   org.springframework: OFF
+   org.hibernate: OFF
+   org.hibernate.SQL: OFF
