cards working, tests pass, need to figure out how to set cbts in store as a plain object vs a class to make redux happy

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest test",
+    "test-once": "jest test",
     "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:8080/",
