--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,8 +2,8 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "license": "MIT",
-  "homepage": "/",
+  "license": "",
+  "homepage": "",
   "dependencies": {
     "@material-ui/core": "^4.9.4",
     "@reduxjs/toolkit": "^1.2.5",
@@ -23,6 +23,7 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
+    "ts-jest": "^25.3.1",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -63,7 +64,6 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.4",
-    "jest": "^25.1.0",
-    "ts-jest": "^25.2.1"
+    "jest": "^24.9.0"
   }
 }
