--- a/pom.xml
+++ b/pom.xml
@@ -132,7 +132,7 @@
                                     <goal>yarn</goal>
                                 </goals>
                                 <configuration>
-                                    <arguments>run test-once</arguments>
+                                    <arguments>run test</arguments>
                                 </configuration>
                             </execution>
 
