--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,7 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
-    "ts-jest": "^25.3.1",
+    "ts-jest": "24.3.0",
     "typescript": "~3.7.2"
   },
   "resolutions": {
