--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,10 @@
 spring:
-#  main:
-#    banner-mode: off
   profiles:
     active: @spring.profiles.active@
+  jpa:
+    properties:
+      hibernate:
+        show_sql: false
   datasource:
     url: jdbc:h2:mem:dafcbts;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
     driver-class-name: org.h2.Driver
